--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #303030; 
+  color: #fff;
+}
+
+.toolbar-view {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .main-content {
+    flex: 1;
+    overflow: auto;
+  }
+}
