Add more deps and models

--- a/frontend/src/app/pages/monitor/monitor.component.html
+++ b/frontend/src/app/pages/monitor/monitor.component.html
@@ -1,6 +1,8 @@
 <div class="toolbar-view">
   <mat-toolbar>
     <span>Monitor</span>
+    <span class="spacer"></span>
+    <button mat-raised-button>Reconfigure</button>
   </mat-toolbar>
   <div class="main-content container" #container>
     <mat-grid-list cols="3" rows="2" [rowHeight]="rowHeigth">
