Add y scale max

--- a/frontend/src/app/pages/monitor/monitor.component.html
+++ b/frontend/src/app/pages/monitor/monitor.component.html
@@ -17,6 +17,7 @@
             [showXAxisLabel]="true"
             [showYAxisLabel]="true"
             [yScaleMin]="0"
+            [yScaleMax]="1"
             xAxisLabel="VMs"
             yAxisLabel="Load Percentage"
           >
