--- a/frontend/src/app/pages/monitor/monitor.component.scss
+++ b/frontend/src/app/pages/monitor/monitor.component.scss
@@ -42,4 +42,15 @@ mat-grid-list {
 .logs-container {
   font-family: 'Courier New', Courier, monospace;
   padding: 8px;
+
+  .log {
+    .log-from {
+      font-weight: bold;
+    }
+  }
+}
+
+
+.category-select {
+  font-size: 14px;
 }
