--- a/frontend/src/app/pages/monitor/monitor.component.scss
+++ b/frontend/src/app/pages/monitor/monitor.component.scss
@@ -17,8 +17,8 @@ mat-grid-list {
     display: flex;
     align-items: center;
     h3 {
-      flex: 1;
       margin: 0;
+      margin-right: 6px;
     }
   }
 
