--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -29,3 +29,11 @@ ngx-charts-bar-vertical {
     fill: #a0aabe;
   }
 }
+
+.badge {
+  padding: 4px 6px;
+  background: #616161;
+  min-width: 12px;
+  text-align: center;
+  border-radius: 4px;
+}
